--- a/Ipa/Modules/Login/ForgetPassword/View/ForgetPasswordPage.xaml
+++ b/Ipa/Modules/Login/ForgetPassword/View/ForgetPasswordPage.xaml
@@ -40,8 +40,8 @@ BackgroundImage="loginBG.png">
 	<StackLayout Spacing="0"  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
 		<StackLayout HorizontalOptions="FillAndExpand" HeightRequest="50">
 			<StackLayout Orientation="Horizontal"  BackgroundColor="#EF0F0F" HorizontalOptions="FillAndExpand">
-				<StackLayout Orientation="Horizontal"  HorizontalOptions="FillAndExpand" Padding="10,10,5,10">
-          <StackLayout HorizontalOptions="Start" Orientation="Horizontal" Padding="0,0,0,0" WidthRequest="60" BackgroundColor="#485faa"  >
+        <StackLayout Orientation="Horizontal"  HorizontalOptions="FillAndExpand" Padding="10,10,5,10">
+          <StackLayout HorizontalOptions="Start" Orientation="Horizontal" HeightRequest="25" WidthRequest="70" BackgroundColor="#485faa"  >
             <StackLayout   Padding="8,0,0,0" VerticalOptions ="Center">
               <Image Source="back_arrow.png" Style="{StaticResource BackArrowImage}" />
               <StackLayout.GestureRecognizers>
@@ -57,14 +57,8 @@ BackgroundImage="loginBG.png">
           
       
 				</StackLayout>
-					
-					<StackLayout >
-					<StackLayout.Padding>
-		<OnPlatform x:TypeArguments="Thickness">
-			<OnPlatform.iOS>15,12,5,5</OnPlatform.iOS>
-			<OnPlatform.Android>15,5,5,5</OnPlatform.Android>
-		</OnPlatform>
-	</StackLayout.Padding>
+
+          <StackLayout VerticalOptions="Center" Padding="30,0,10,0">
 					<Label Text="Reset Password" TextColor="#FFFFFF" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="18" />
 					</StackLayout>
 				</StackLayout>
