--- a/Ipa/Modules/Common Views/ParticipantHomeItemView.xaml
+++ b/Ipa/Modules/Common Views/ParticipantHomeItemView.xaml
@@ -8,7 +8,7 @@ x:Class="Ipa.ParticipantHomeItemView">
 	<ContentView.Content>
 	<StackLayout HorizontalOptions="FillAndExpand" Spacing="0">
     <StackLayout Padding="10,0,0,00" HorizontalOptions="FillAndExpand" BackgroundColor="#485faa">
-      <Label Text="MY ENROLLED COURSE(S)" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" HeightRequest="44" TextColor="#FFFFFF" FontSize="12" />
+      <Label Text="MY COURSE(S)" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" HeightRequest="44" TextColor="#FFFFFF" FontSize="12" />
     </StackLayout>
 					<ListView 
 						x:Name="CourseList" 
