--- a/Ipa/Modules/Common Views/ParticipantItemView.xaml
+++ b/Ipa/Modules/Common Views/ParticipantItemView.xaml
@@ -18,13 +18,13 @@ x:Class="Ipa.ParticipantItemView"
 				<Setter Property="VerticalOptions" Value="Center" />
 			</Style>
 			<Style x:Key="EmpName" TargetType="Label">
-				<Setter Property="TextColor" Value="#2D2D2D" />
+				<Setter Property="TextColor" Value="#000000" />
 				<Setter Property="VerticalTextAlignment" Value="Center" />
 				<Setter Property="FontSize" Value="13" />
 				<Setter Property="Font" Value="{x:Static local:Constants.FontStyle}" />
 			</Style>
 			<Style x:Key="EmpId" TargetType="Label">
-				<Setter Property="TextColor" Value="#B2B2B2" />
+				<Setter Property="TextColor" Value="#555555" />
 				<Setter Property="VerticalTextAlignment" Value="Center" />
 				<Setter Property="FontSize" Value="11" />
 				<Setter Property="Font" Value="{x:Static local:Constants.FontStyle}" />
@@ -38,17 +38,16 @@ x:Class="Ipa.ParticipantItemView"
 		</ResourceDictionary>
 	</ContentView.Resources>
 	<ContentView.Content>
-	<StackLayout HorizontalOptions="FillAndExpand" BackgroundColor="#FFFFFF" Spacing="8" Padding="10,7,0,7" HeightRequest="{StaticResource HeaderRowHeight}">
-		<StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" Spacing="10"  BackgroundColor="#FFFFFF" >
+    <StackLayout HorizontalOptions="FillAndExpand" Padding="10,5,10,5" BackgroundColor="#FFFFFF">
+	<StackLayout HorizontalOptions="FillAndExpand" BackgroundColor="#eae8e8" Spacing="8" Padding="10,7,0,7" HeightRequest="{StaticResource HeaderRowHeight}">
+		<StackLayout HorizontalOptions="FillAndExpand" Orientation="Horizontal" Spacing="10"  >
 			<ffimageloading:CachedImage x:Name="ProfileImage"  Style="{StaticResource ProfileImage}" />
 			<StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 				<Label x:Name="Name" Style="{StaticResource EmpName}" HorizontalOptions="FillAndExpand"/>
 				<Label x:Name="EmpId" Style="{StaticResource EmpId}" HorizontalOptions="FillAndExpand" />
 			</StackLayout>
 		</StackLayout>
-		<StackLayout HorizontalOptions="FillAndExpand" >
-			<BoxView Style="{StaticResource BoxViewStyle}" />
-		</StackLayout>
+  </StackLayout>
 	</StackLayout>
 	</ContentView.Content>
 </ContentView>
