--- a/Ipa/Modules/HomePage/Participant/View/ParticipantCourseDetailPage.xaml
+++ b/Ipa/Modules/HomePage/Participant/View/ParticipantCourseDetailPage.xaml
@@ -37,8 +37,10 @@ x:Class="Ipa.ParticipantCourseDetailPage">
 
         <StackLayout HorizontalOptions="FillAndExpand" HeightRequest="50">
           <StackLayout Orientation="Horizontal"  BackgroundColor="#ef0f0f" HorizontalOptions="FillAndExpand">
-            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="10,10,5,10">
-              <StackLayout HorizontalOptions="Start" Orientation="Horizontal" HeightRequest="25" WidthRequest="70" BackgroundColor="#485faa">
+            
+            <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" >
+              <StackLayout HorizontalOptions="Start" Padding="10,10,5,10">
+              <StackLayout Orientation="Horizontal" HeightRequest="25" WidthRequest="70" BackgroundColor="#485faa">
                 <StackLayout HorizontalOptions="Start"  Padding="8,0,0,0" VerticalOptions ="Center">
                   <Image Source="back_arrow.png" Style="{StaticResource BackArrowImage}" />
                   <StackLayout.GestureRecognizers>
@@ -52,11 +54,12 @@ x:Class="Ipa.ParticipantCourseDetailPage">
                   </StackLayout.GestureRecognizers>
                 </StackLayout>
               </StackLayout>
+              </StackLayout>
               <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Center" Padding="30,0,10,0">
-                <Label Text="{Binding CourseFullName}" LineBreakMode="TailTruncation"  TextColor="#FFFFFF" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="14" />
+                <Label Text="{Binding CourseFullName}" LineBreakMode="TailTruncation"  TextColor="#FFFFFF" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="18" />
                 <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
                   <Image Source="{Binding CourseSource}" Style="{StaticResource StatusImage}" />
-                  <Label Text="{Binding CourseStatus}" TextColor="#485faa" FontFamily="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="12" />
+                  <Label Text="{Binding CourseStatus}" TextColor="#FFFFFF" FontFamily="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="12" />
                 </StackLayout>
               </StackLayout>
             </StackLayout>
@@ -70,6 +73,7 @@ x:Class="Ipa.ParticipantCourseDetailPage">
 							<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" BackgroundColor="#485faa">
 								<Label Text="PENDING ACTIVITIE(S)" FontFamily="{x:Static local:Constants.FontStyle}" HeightRequest="33" VerticalTextAlignment="Center" TextColor="#FFFFFF" FontSize="12" />
 							</StackLayout>
+              <Views:ListSeperator> </Views:ListSeperator>
 							<ListView 
 							x:Name="PendingActivityList" 
 							ItemsSource="{Binding PendingActivity}" 
@@ -89,10 +93,12 @@ x:Class="Ipa.ParticipantCourseDetailPage">
 								</ListView.ItemTemplate>
 							</ListView>
 						</StackLayout>
+            <Views:ListSeperator> </Views:ListSeperator>
 						<StackLayout HorizontalOptions="FillAndExpand" IsVisible="{Binding CanShowOverDue}" Spacing="0">
 							<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" BackgroundColor="#485faa">
 								<Label Text="OVERDUE ACTIVITIE(S)" FontFamily="{x:Static local:Constants.FontStyle}" HeightRequest="42" VerticalTextAlignment="Center" TextColor="#FFFFFF" FontSize="12" />
 							</StackLayout>
+              <Views:ListSeperator> </Views:ListSeperator>
 							<ListView 
 							x:Name="OverDueActivityList" 
 							ItemsSource="{Binding OverDueActivity}" 
@@ -112,10 +118,12 @@ x:Class="Ipa.ParticipantCourseDetailPage">
 								</ListView.ItemTemplate>
 							</ListView>
 						</StackLayout>
+            <Views:ListSeperator> </Views:ListSeperator>
 						<StackLayout HorizontalOptions="FillAndExpand" IsVisible="{Binding CanShowCompleted}" Spacing="0">
 							<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" BackgroundColor="#485faa">
 								<Label Text="COMPLETED ACTIVITIE(S)" FontFamily="{x:Static local:Constants.FontStyle}" HeightRequest="42" VerticalTextAlignment="Center" TextColor="#8A8A8A" FontSize="12" />
 							</StackLayout>
+              <Views:ListSeperator> </Views:ListSeperator>
 							<ListView 
 							x:Name="CompletedActivityList" 
 							ItemsSource="{Binding CompletedActivity}" 
