--- a/Ipa/Modules/HomePage/Partner/View/PartnerAttendanceLookupPage.xaml
+++ b/Ipa/Modules/HomePage/Partner/View/PartnerAttendanceLookupPage.xaml
@@ -54,19 +54,21 @@ x:Class="Ipa.PartnerAttendanceLookupPage">
 	<StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Spacing="0">
     <StackLayout HorizontalOptions="FillAndExpand" HeightRequest="50">
       <StackLayout Orientation="Horizontal"  BackgroundColor="#ef0f0f" HorizontalOptions="FillAndExpand">
-        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="10,10,5,10">
-          <StackLayout HorizontalOptions="Start" Orientation="Horizontal" HeightRequest="25" WidthRequest="70" BackgroundColor="#485faa">
-            <StackLayout HorizontalOptions="Start"  Padding="8,0,0,0" VerticalOptions ="Center">
-              <Image Source="back_arrow.png" Style="{StaticResource BackArrowImage}" />
-              <StackLayout.GestureRecognizers>
-                <TapGestureRecognizer Command="{Binding BackBtnCmd}" />
-              </StackLayout.GestureRecognizers>
-            </StackLayout>
-            <StackLayout HorizontalOptions="End" VerticalOptions ="Center" WidthRequest="50">
-              <Label Text="BACK" TextColor="#FFFFFF" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="14" />
-              <StackLayout.GestureRecognizers>
-                <TapGestureRecognizer Command="{Binding BackBtnCmd}" />
-              </StackLayout.GestureRecognizers>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" >
+          <StackLayout HorizontalOptions="Start" Padding="10,10,5,10">
+            <StackLayout Orientation="Horizontal" HeightRequest="25" WidthRequest="70" BackgroundColor="#485faa">
+              <StackLayout HorizontalOptions="Start"  Padding="8,0,0,0" VerticalOptions ="Center">
+                <Image Source="back_arrow.png" Style="{StaticResource BackArrowImage}" />
+                <StackLayout.GestureRecognizers>
+                  <TapGestureRecognizer Command="{Binding BackBtnCmd}" />
+                </StackLayout.GestureRecognizers>
+              </StackLayout>
+              <StackLayout HorizontalOptions="End" VerticalOptions ="Center" WidthRequest="50">
+                <Label Text="BACK" TextColor="#FFFFFF" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="14" />
+                <StackLayout.GestureRecognizers>
+                  <TapGestureRecognizer Command="{Binding BackBtnCmd}" />
+                </StackLayout.GestureRecognizers>
+              </StackLayout>
             </StackLayout>
           </StackLayout>
           <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Center" Padding="30,0,10,0">
