--- a/Ipa/Modules/Reports/Manager/View/ManagerReportPage.xaml
+++ b/Ipa/Modules/Reports/Manager/View/ManagerReportPage.xaml
@@ -110,7 +110,7 @@ x:Class="Ipa.ManagerReportPage" Title="">
 							<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 
 				<RelativeLayout x:Name="RelativeStackLayout" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-						<StackLayout BackgroundColor="#3B495D" 
+						<StackLayout BackgroundColor="#000000" 
 						RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}" 
 						RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,ElementName=RelativeStackLayout,Property=Width}">
 							<StackLayout Orientation="Horizontal" x:Name="CourseNameMenu"  HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="110" Padding="10,10,10,10" >
@@ -159,7 +159,7 @@ x:Class="Ipa.ManagerReportPage" Title="">
 						</ListView>
 						</StackLayout>
 						<ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-							<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
+							<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#3B495D">
 					<Views:ParticipantReportItemView />
 				</StackLayout>
 			</ScrollView>
