--- a/Ipa/Modules/Reports/Participant/View/ParticipantReportPage.xaml
+++ b/Ipa/Modules/Reports/Participant/View/ParticipantReportPage.xaml
@@ -46,7 +46,7 @@ x:Name="ParticipantReport" Title="">
 			<StackLayout Spacing="0" HorizontalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 				<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
 					<RelativeLayout x:Name="RelativeStack" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
-						<StackLayout BackgroundColor="#3B495D" 
+						<StackLayout BackgroundColor="#000000" 
 						RelativeLayout.HeightConstraint="{ConstraintExpression Type=Constant,Constant=44}" 
 						RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,ElementName=RelativeStack,Property=Width}">
 							<StackLayout Orientation="Horizontal" x:Name="CourseMenu"  HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand" WidthRequest="110" Padding="10,10,10,10" >
@@ -76,7 +76,7 @@ x:Name="ParticipantReport" Title="">
 												<Label x:Name="Name" Text="{Binding CourseShortName}" TextColor="#FFFFFF" FontAttributes="Bold" LineBreakMode="TailTruncation"  FontFamily="{x:Static local:Constants.FontStyle}"  HorizontalOptions="Fill" VerticalOptions="FillAndExpand" VerticalTextAlignment="Center" FontSize="13">
 													</Label>
 												</StackLayout>
-												<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" Spacing="0">
+												<StackLayout HorizontalOptions="FillAndExpand" Padding="10,0,0,0" Spacing="0" BackgroundColor="#ef0f0f">
 													<BoxView Style="{StaticResource BoxViewStyle}" />
 												</StackLayout>
 											</StackLayout>
@@ -87,7 +87,7 @@ x:Name="ParticipantReport" Title="">
 						</ListView>
 					</StackLayout>
 						<ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-							<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#EEEEEE">
+							<StackLayout Spacing="0" VerticalOptions="FillAndExpand" BackgroundColor="#485faa">
 					<Views:ParticipantReportItemView />
 				</StackLayout>
 			</ScrollView>
