--- a/Ipa/Modules/settings/StaticPages/HowthisAppWorksPage.xaml
+++ b/Ipa/Modules/settings/StaticPages/HowthisAppWorksPage.xaml
@@ -14,7 +14,7 @@ xmlns:local="clr-namespace:Ipa;assembly=Ipa"
 				<Setter Property="VerticalTextAlignment" Value="Center"></Setter>
 			</Style>
 			<Style x:Key="BackArrowImage" TargetType="Image">
-				<Setter Property="HeightRequest" Value="15" />
+				<Setter Property="HeightRequest" Value="16" />
 				<Setter Property="WidthRequest" Value="9" />
 				<Setter Property="Aspect" Value="AspectFit" />
 				<Setter Property="HorizontalOptions" Value="Start" />
@@ -29,7 +29,7 @@ xmlns:local="clr-namespace:Ipa;assembly=Ipa"
       <StackLayout HorizontalOptions="FillAndExpand" HeightRequest="50">
         <StackLayout Orientation="Horizontal"  BackgroundColor="#EF0F0F" HorizontalOptions="FillAndExpand">
           <StackLayout Orientation="Horizontal"  HorizontalOptions="FillAndExpand" Padding="10,10,5,10">
-            <StackLayout HorizontalOptions="Start" Orientation="Horizontal" Padding="0,0,0,0" WidthRequest="60" BackgroundColor="#485faa"  >
+            <StackLayout HorizontalOptions="Start" Orientation="Horizontal" HeightRequest="25" WidthRequest="70" BackgroundColor="#485faa"  >
               <StackLayout   Padding="8,0,0,0" VerticalOptions ="Center">
                 <Image Source="back_arrow.png" Style="{StaticResource BackArrowImage}" />
                 <StackLayout.GestureRecognizers>
@@ -43,13 +43,8 @@ xmlns:local="clr-namespace:Ipa;assembly=Ipa"
                 </StackLayout.GestureRecognizers>
               </StackLayout>
             </StackLayout>
-            <StackLayout>
-              <StackLayout.Padding>
-                <OnPlatform x:TypeArguments="Thickness">
-                  <OnPlatform.iOS>15,12,5,5</OnPlatform.iOS>
-                  <OnPlatform.Android>15,5,5,5</OnPlatform.Android>
-                </OnPlatform>
-              </StackLayout.Padding>
+            <StackLayout VerticalOptions="Center" Padding="30,0,10,0">
+              
               <Label Text="{Binding TitleText}" LineBreakMode="TailTruncation" TextColor="#FFFFFF" Font="{x:Static local:Constants.FontStyle}" VerticalTextAlignment="Center" FontSize="18" />
             </StackLayout>
           </StackLayout>
